--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
 
     compile 'net.simonvt.schematic:schematic:0.7.0'
     annotationProcessor 'net.simonvt.schematic:schematic-compiler:0.7.0'
+
+    compile 'com.sothree.slidinguppanel:library:3.3.1'
 }
