Actionbar home button works as expected. Add one more error view to exoplayerview when there is no internet connection, so the video is unplayable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,12 @@
 
         <activity android:name=".RecipeDetailActivity"
             android:parentActivityName=".MainActivity"
-            android:configChanges="orientation|screenSize"/>
+            android:configChanges="orientation|screenSize">
+             <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+        </activity>
+
     </application>
 
 </manifest>
