--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
             android:launchMode="singleTop">
@@ -20,12 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <provider
             android:name=".db.generated.BakingProvider"
             android:authorities="com.lee.hansol.bakingtime.BakingProvider"
             android:exported="false"/>
-
         <activity android:name=".RecipeDetailActivity"
             android:parentActivityName=".MainActivity"
             android:configChanges="orientation|screenSize">
@@ -33,7 +30,18 @@
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".MainActivity" />
         </activity>
-
+        <receiver android:name=".RecipeAppWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/recipe_appwidget_info" />
+        </receiver>
+        <activity android:name=".RecipeAppWidgetConfigureActivity">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
