--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,19 +30,19 @@
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".MainActivity" />
         </activity>
-        <receiver android:name=".RecipeAppWidgetProvider">
+        <receiver android:name=".widget.RecipeAppWidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <meta-data android:name="android.appwidget.provider"
                 android:resource="@xml/recipe_appwidget_info" />
         </receiver>
-        <activity android:name=".RecipeAppWidgetConfigureActivity">
+        <activity android:name=".widget.RecipeAppWidgetConfigureActivity">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
             </intent-filter>
         </activity>
-        <service android:name=".RecipeIngredientsWidgetService"
+        <service android:name=".widget.RecipeIngredientsWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS"
             android:exported="false"/>
     </application>
