--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,8 @@ dependencies {
 
     compile 'com.sothree.slidinguppanel:library:3.3.1'
 
-//    compile 'com.google.android.exoplayer:exoplayer:r2.4.0'
     compile 'com.google.android.exoplayer:exoplayer-core:r2.4.0'
     compile 'com.google.android.exoplayer:exoplayer-ui:r2.4.0'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
