--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
-            android:configChanges="orientation|screenSize"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,8 +23,7 @@
             android:authorities="com.lee.hansol.bakingtime.BakingProvider"
             android:exported="false"/>
         <activity android:name=".RecipeDetailActivity"
-            android:parentActivityName=".MainActivity"
-            android:configChanges="orientation|screenSize">
+            android:parentActivityName=".MainActivity">
              <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".MainActivity" />
